--- a/Views/Persona/Index.cshtml
+++ b/Views/Persona/Index.cshtml
@@ -3,13 +3,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bienvenido</h1>
-    <ul>
-        @foreach(var item in Model)
-        {   
-            <li>@item.Nombre<a asp-action="Editar" asp-route-itemid="@item.Id">(@item.Dni)</a></li>
-        }
-    </ul>
-    <a href="http://localhost:5296/Persona/Editar" class="btn btn-primary">Crear Persona</a>
+<div>
+	<h1 class="display-4">Lista de Personas</h1>
+	<h4><a asp-action="Editar">Crear</a></h4>
+	<ul>
+		@foreach (var item in Model)
+		{
+			<li>@item.Nombre 
+				<a asp-action="Editar" asp-route-id="@item.Id">(@item.Dni)</a>
+				<a asp-action="Eliminar" asp-route-id="@item.Id"><i class="fa fa-trash text-danger"></i></a>
+			</li>
+		}
+	</ul>
 </div>
