--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -60,7 +60,7 @@
                             class="lnr lnr-pencil"></span></a>&nbsp;
                     <a asp-action="Eliminar" asp-route-id="@item.IdPropietario" title="Eliminar"
                         onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
-                            class="lnr lnr-cross"></span></a>
+                            class="fa fa-trash text-danger"></span></a>
                 </td>
 
             </tr>
