--- a/Views/Persona/Index.cshtml
+++ b/Views/Persona/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-	<h1 class="display-4">Lista de Personas</h1>
+	<h1 class="display-4">Personas</h1>
 	<h4><a asp-action="Editar">Crear</a></h4>
 	<ul>
 		@foreach (var item in Model)
