--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Propietarios</h1>
 
 <p>
-    <a asp-action="Editar">Crear nuevo</a>
+    <a asp-action="Editar" class="btn btn-primary">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -57,7 +57,7 @@
                 </td>
                 <td>
                     <a asp-action="Editar" asp-route-IdPropietario="@item.IdPropietario" title="Editar"><span
-                            class="lnr lnr-pencil"></span></a>&nbsp;
+                            class="fa fa-edit"></span></a>&nbsp;
                     <a asp-action="Eliminar" asp-route-id="@item.IdPropietario" title="Eliminar"
                         onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
                             class="fa fa-trash text-danger"></span></a>
