--- a/Views/Persona/Index.cshtml
+++ b/Views/Persona/Index.cshtml
@@ -9,8 +9,8 @@
 <p>
     <a asp-action="Editar" class="btn btn-primary">Crear nuevo</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped">
+    <thead >
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Id)
