--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Editar" class="btn btn-primary">Crear nuevo</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
