--- a/Views/Persona/Index.cshtml
+++ b/Views/Persona/Index.cshtml
@@ -53,7 +53,7 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    <a asp-action="Editar" asp-route-IdPropietario="@item.Id" title="Editar"><span
+                    <a asp-action="Editar" asp-route-Id="@item.Id" title="Editar"><span
                             class="fa fa-edit"></span></a>&nbsp;
                     <a asp-action="Eliminar" asp-route-id="@item.Id" title="Eliminar"
                         onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
