--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -1,18 +1,18 @@
-@model Persona
+@model Inquilino
 @{
-    ViewData["Title"] = "Persona";
-    int id = Model == null ? 0 : Model.Id;
+    ViewData["Title"] = "Inquilino";
+    int id = Model == null ? 0 : Model.IdInquilino;
 }
 
-<h4>Persona</h4>
+<h4>Inquilino</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Guardar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+                        <div class="form-group">
                 <label class="control-label">Código</label>
-                <input name="Id" class="form-control" value="@id" readonly />
+                <input name="IdInquilino" class="form-control" value="@id" readonly />
             </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
@@ -21,13 +21,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" required/>
+                <input asp-for="Apellido" class="form-control"required />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" required/>
+                <input asp-for="Dni" class="form-control" required />
                 <span asp-validation-for="Dni" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Telefono" class="control-label"></label>
+                <input asp-for="Telefono" class="form-control" required/>
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
