--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -1,43 +1,54 @@
-@model Inquilino
+@model Inmobiliaria.Models.Inmueble
+
 @{
-    ViewData["Title"] = "Inquilino";
-    int id = Model == null ? 0 : Model.IdInquilino;
+    ViewData["Title"] = "Inmueble";
+    int id = Model == null ? 0 : Model.IdInmueble;
 }
 
-<h4>Inquilino</h4>
+<h4>Inmueble</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Guardar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="form-group">
-                <label class="control-label">Código</label>
-                <input name="IdInquilino" class="form-control" value="@id" readonly />
+            <div class="form-group">
+                <label asp-for="IdInmueble" class="control-label"></label>
+                <input asp-for="IdInmueble" class="form-control" readonly />
             </div>
             <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" required/>
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+                <label asp-for="Direccion" class="control-label"></label>
+                <input asp-for="Direccion" class="form-control" required />
+                <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control"required />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
+                <label asp-for="Uso" class="control-label"></label>
+                <input asp-for="Uso" class="form-control" required />
+                <span asp-validation-for="Uso" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" required />
-                <span asp-validation-for="Dni" class="text-danger"></span>
+                <label asp-for="Tipo" class="control-label"></label>
+                <input asp-for="Tipo" class="form-control" required />
+                <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" required/>
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Ambientes" class="control-label"></label>
+                <input asp-for="Ambientes" class="form-control" required />
+                <span asp-validation-for="Ambientes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" required/>
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Superficie" class="control-label"></label>
+                <input asp-for="Superficie" class="form-control" required />
+                <span asp-validation-for="Superficie" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Valor" class="control-label"></label>
+                <input asp-for="Valor" class="form-control" required />
+                <span asp-validation-for="Valor" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdPropietario" class="control-label"></label>
+                <input asp-for="IdPropietario" class="form-control" required />
+                <span asp-validation-for="IdPropietario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
