--- a/Views/Inmueble/Crear.cshtml
+++ b/Views/Inmueble/Crear.cshtml
@@ -68,8 +68,7 @@
                 <select asp-for="IdPropietario" class="form-control" required>
                     @foreach (var item in ViewBag.Propietarios)
                     {
-                        @:<option @(item.IdPropietario==Model.IdPropietario ? "selected" : "") value="@item.IdPropietario">@(item.Nombre + " " + item.Apellido)</option>                    
-                        }
+						<option value="@item.IdPropietario">@(item.ToString())</option>                        }
                 </select>
 
                 <span asp-validation-for="IdPropietario" class="text-danger"></span>
