--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Buscar..." id="searchInput">
     <div class="input-group-append">
-        <a asp-action="Editar" class="btn btn-primary">Crear nuevo</a>
+        <a asp-action="Crear" class="btn btn-primary">Crear nuevo</a>
     </div>
 </div>
 
