--- a/Views/Inmueble/Crear.cshtml
+++ b/Views/Inmueble/Crear.cshtml
@@ -11,10 +11,7 @@
     <div class="col-md-4">
         <form asp-action="Guardar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdInmueble" class="control-label"></label>
-                <input asp-for="IdInmueble" class="form-control" readonly />
-            </div>
+
             <div class="form-group">
                 <label asp-for="Direccion" class="control-label"></label>
                 <input asp-for="Direccion" class="form-control" required />
@@ -68,7 +65,8 @@
                 <select asp-for="IdPropietario" class="form-control" required>
                     @foreach (var item in ViewBag.Propietarios)
                     {
-						<option value="@item.IdPropietario">@(item.ToString())</option>                        }
+                        <option value="@item.IdPropietario">@(item.ToString())</option>
+                    }
                 </select>
 
                 <span asp-validation-for="IdPropietario" class="text-danger"></span>
