--- a/Views/Contrato/Crear.cshtml
+++ b/Views/Contrato/Crear.cshtml
@@ -2,7 +2,67 @@
 
 @{
     ViewData["Title"] = "Contrato";
+    int id = Model == null ? 0 : Model.IdContrato;
 }
 
-<h4>Contratos</h4>
+<h4>Contrato</h4>
 <hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Guardar" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="FechaInicio" class="control-label"></label>
+                <input asp-for="FechaInicio" class="form-control" required />
+                <span asp-validation-for="FechaInicio" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FechaFinalizacion" class="control-label"></label>
+                <input asp-for="FechaFinalizacion" class="form-control" required />
+                <span asp-validation-for="FechaFinalizacion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MontoAlquiler" class="control-label"></label>
+                <input asp-for="MontoAlquiler" class="form-control" required />
+                <span asp-validation-for="MontoAlquiler" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Estado" class="control-label">Estado (Elegir)</label>
+                <select asp-for="Estado" class="form-control" required>
+                    <option value="true">Activo</option>
+                    <option value="false">Inactivo</option>
+                </select>
+                <span asp-validation-for="Estado" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdInquilino" class="control-label">Inquilino (Elegir)</label>
+                <select asp-for="IdInquilino" class="form-control" required>
+                    @foreach (var item in ViewBag.Inquilinos)
+                    {
+                        <option value="@item.IdInquilino">@(item.ToString())</option>
+                    }
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="IdInmueble" class="control-label">Inmueble (elegir)</label>
+                <select asp-for="IdInmueble" class="form-control" required>
+                    @foreach (var item in ViewBag.Inmuebles)
+                    {
+                        <option value= "@item.IdInmueble">"@(item.ToString())</option>
+                    }
+                </select>
+            
+            </div>
+    
+            <div class="form-group">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Volver</a>
+</div>
