--- a/Views/Contrato/Crear.cshtml
+++ b/Views/Contrato/Crear.cshtml
@@ -9,6 +9,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <div class="alert alert-danger" role="alert">
+                @TempData["ErrorMessage"]
+            </div>
+        }
         <form asp-action="Guardar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -50,10 +56,9 @@
                 <select asp-for="IdInmueble" class="form-control" required>
                     @foreach (var item in ViewBag.Inmuebles)
                     {
-                        <option value= "@item.IdInmueble">"@(item.ToString())</option>
+                        <option value="@item.IdInmueble">@(item.ToString())</option>
                     }
                 </select>
-            
             </div>
     
             <div class="form-group">
