--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -12,6 +12,12 @@
         <a asp-action="Crear" class="btn btn-primary">Crear nuevo</a>
     </div>
 </div>
+@if (ViewData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @ViewData["SuccessMessage"]
+    </div>
+}
 
 <table class="table table-striped">
     <thead>
