--- a/Views/Contrato/Crear.cshtml
+++ b/Views/Contrato/Crear.cshtml
@@ -62,12 +62,12 @@
             </div>
     
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volver</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver</a>
 </div>
