--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -26,13 +26,13 @@
                 @Html.DisplayNameFor(model => model.IdContrato)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaInicio)
+                Fecha Inicio
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaFinalizacion)
+                Fecha Finalizacion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MontoAlquiler)
+                Monto Alquiler
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
