--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -68,7 +68,9 @@
                 </td>
                 <td>
                     <a asp-action="Editar" asp-route-idInmueble="@item.IdInmueble" title="Editar"><span
-                            class="fa fa-edit"></span></a>&nbsp;
+                            class="fa fa-edit"></span></a>
+                    <a asp-action="Detalle" asp-route-IdInmueble="@item.IdInmueble" title="DetallePropietario"><span
+                            class="fa fa-info"></span></a>
                     <a asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar"
                         onclick="return confirm('¿Estás seguro de eliminar a @item.Tipo @item.Uso @item.Direccion?');"><span
                             class="fa fa-trash text-danger"></span></a>
