Se arregla editar y detalle
Se arreglo el editar y detalle del contrato, ahora se muestra bien la direccion

--- a/Views/Contrato/Editar.cshtml
+++ b/Views/Contrato/Editar.cshtml
@@ -47,16 +47,15 @@
             <span asp-validation-for="IdInquilino" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="IdInmueble" class="control-label">Inmueble</label>
+            <label asp-for="IdInmueble" class="control-label">Inquilino</label>
             <select asp-for="IdInmueble" class="form-control" required>
-                @foreach (var item in ViewBag.Inmuebles )
+                @foreach (var item in ViewBag.Inmuebles)
                 {
                     <option value="@item.IdInmueble">@($"{item.Direccion}")</option>
                 }
             </select>
             <span asp-validation-for="IdInquilino" class="text-danger"></span>
         </div>
-
 
         <div class="form-group">
             <input type="submit" value="Guardar" class="btn btn-success" />
