--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Bienvenido</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Inmobiliaria ULP</p>
+
+<img src="https://img.freepik.com/foto-gratis/agente-inmobiliario-trabajo-que-muestra-casa-hace-negocios_23-2150164731.jpg?w=1380&t=st=1711908330~exp=1711908930~hmac=eb0e0b9b209b41f3c25b2f860d7bcd4240231c6c56fdfffe46c0fedb33788222" alt="Imagen Inmobiliaria" width="100%">
 </div>
