--- a/Views/Inquilino/Detalle.cshtml
+++ b/Views/Inquilino/Detalle.cshtml
@@ -1,51 +1,43 @@
-@model Propietario
+@model Inquilino
 @{
-    ViewData["Title"] = "Propietario";
-    int id = Model == null ? 0 : Model.IdPropietario;
+    ViewData["Title"] = "Inquilino";
+    int id = Model == null ? 0 : Model.IdInquilino;
 }
 
-<h4>Propietario</h4>
+<h4>Detalle Inquilino</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Guardar" method="post">
+        <form>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+                        <div class="form-group">
                 <label class="control-label">Código</label>
-                <input name="IdPropietario" class="form-control" value="@id" readonly />
+                <input name="IdInquilino" class="form-control" value="@id" readonly />
             </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" required/>
+                <input asp-for="Nombre" class="form-control" readonly/>
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" required/>
+                <input asp-for="Apellido" class="form-control"readonly />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" required/>
+                <input asp-for="Dni" class="form-control" readonly />
                 <span asp-validation-for="Dni" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" required/>
+                <input asp-for="Telefono" class="form-control" readonly/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" required/>
+                <input asp-for="Email" class="form-control" readonly/>
                 <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" required/>
-                <span asp-validation-for="Clave" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-success" />
             </div>
         </form>
     </div>
