--- a/Views/Propietario/Detalle.cshtml
+++ b/Views/Propietario/Detalle.cshtml
@@ -1,46 +1,53 @@
-@model Persona
+﻿@model Propietario
 @{
-    ViewData["Title"] = "Persona";
-    int id = Model == null ? 0 : Model.Id;
+    ViewData["Title"] = "Propietario";
+    int id = Model == null ? 0 : Model.IdPropietario;
 }
 
-<h4>Persona</h4>
+<h4>Detalle propietario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Guardar" method="post">
+        <form>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Código</label>
-                <input name="Id" class="form-control" value="@id" readonly />
+                <input name="IdPropietario" class="form-control" value="@id" readonly />
             </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control" readonly/>
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control" readonly/>
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dni" class="control-label"></label>
-                <input asp-for="Dni" class="form-control" />
+                <input asp-for="Dni" class="form-control" readonly/>
                 <span asp-validation-for="Dni" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <label asp-for="Telefono" class="control-label"></label>
+                <input asp-for="Telefono" class="form-control" readonly/>
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" readonly/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Clave" class="control-label"></label>
+                <input asp-for="Clave" class="form-control" readonly/>
+                <span asp-validation-for="Clave" class="text-danger"></span>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volver</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver</a>
 </div>
