--- a/Views/Usuario/Detalle.cshtml
+++ b/Views/Usuario/Detalle.cshtml
@@ -1,8 +1,8 @@
-@model Inmobiliaria.Models.Contrato
+@model Inmobiliaria.Models.Usuario
 @{
-    ViewData["Title"] = "Detalle Contrato";
+    ViewData["Title"] = "Editar Usuario";
 }
-
+<!--
 <h4>Detalle Contrato</h4>
 <hr />
 <div class="row">
@@ -63,3 +63,4 @@
 <div>
     <a asp-action="Index" class="btn btn-secondary">Volver</a>
 </div>
+-->
