--- a/Views/Usuario/Crear.cshtml
+++ b/Views/Usuario/Crear.cshtml
@@ -15,7 +15,7 @@
                 @TempData["ErrorMessage"]
             </div>
         }
-        <form asp-action="Guardar" enctype="multipart/form-data">
+        <form asp-action="Crear" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -54,7 +54,7 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-success" />
+                <input type="submit" value="Crear" class="btn btn-success" />
             </div>
         </form>
     </div>
