--- a/Views/Pago/Crear.cshtml
+++ b/Views/Pago/Crear.cshtml
@@ -38,8 +38,8 @@
             <div class="form-group">
                 <label asp-for="Estado" class="control-label">Estado (Elegir)</label>
                 <select asp-for="Estado" class="form-control" required>
-                    <option value="true">Activo</option>
-                    <option value="false">Inactivo</option>
+                    <option value="true">Pagado</option>
+                    <option value="false">Pendiente</option>
                 </select>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
