--- a/Views/Pago/Editar.cshtml
+++ b/Views/Pago/Editar.cshtml
@@ -2,7 +2,56 @@
 
 @{
     ViewData["Title"] = "Pagos";
-    int id = Model == null ? 0 : Model.IdPago;
 }
 
 <h4>Pagos</h4>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Guardar" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="IdPago" class="control-label"></label>
+                <input asp-for="IdPago" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="FechaPago" class="control-label">Fecha de pago</label>
+                <input asp-for="FechaPago" class="form-control" required />
+                <span asp-validation-for="FechaPago" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Monto" class="control-label"></label>
+                <input asp-for="Monto" class="form-control" required />
+                <span asp-validation-for="Monto" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Detalle" class="control-label"></label>
+                <input asp-for="Detalle" class="form-control" required />
+                <span asp-validation-for="Detalle" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Estado" class="control-label">Estado</label>
+                <select asp-for="Estado" class="form-control" required>
+                    <option value="True">Pagado</option>
+                    <option value="False">Pendiente</option>
+                </select>
+                <span asp-validation-for="Estado" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdContrato" class="control-label">Contrato (Elegir)</label>
+                <select asp-for="IdContrato" class="form-control" required>
+                    @foreach (var item in ViewBag.Contratos)
+                    {
+                        <option value="@item.IdContrato">@(item.ToString())</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Guardar" class="btn btn-success" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index" class="btn btn-secondary">Volver</a>
+</div>
